# 7rikazhexde_json2vars-setter

./: .pre-commit-config.yaml  action.yml  pyproject.toml
.github/workflows/: dependabot_prch.yml  deploy.yml  go_test.yml  nodejs_test.yml  prch_test_matrix_json.yml  python_test.yml  ruby_test.yml  rust_test.yml  update-requirements-after-dependabot.yml  update-version-and-release.yml  update_pre-commit_hooks.yml
